# ScatterRad

./: README.md  pyproject.toml  visualize_npz_crops.ipynb
docs/: AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  SCHEMAS.md  V2_ROADMAP.md
docs/decisions/: DEC001_one_modality_per_project.md  DEC002_attention_pool_default.md  DEC003_mask_mode_configurable.md  DEC004_normalization_strategy.md  DEC005_planner_caches_scatter.md
docs/modules/: 01_paths_and_config.md  02_preprocessing.md  03_radiomics_track.md  04_scatter_track.md  05_data_loading.md  06_evaluation.md  07_cli_wiring.md
src/scatterrad/: cli.py  paths.py
src/scatterrad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scatterrad/config/: __init__.py  dataset.py  plans.py  targets.py  task.py
src/scatterrad/data/: __init__.py  augment.py  collate.py  dataset.py  sampler.py
src/scatterrad/evaluation/: __init__.py  aggregate.py  metrics.py  report.py
src/scatterrad/models/radiomics/: __init__.py  analysis.py  config.py  extractor.py  predictor.py  reproducibility.py  tester.py  trainer.py
src/scatterrad/models/scatter/: __init__.py  backend.py  (+6 more)
src/scatterrad/preprocessing/: __init__.py  crop.py  holdout.py  normalize.py  planner.py  resample.py  runner.py  splits.py
src/scatterrad/utils/: __init__.py  parallel.py
tests/: conftest.py  test_cli_smoke.py  test_dataset_config.py  test_holdout.py  test_paths.py  test_planner.py  test_plans_config.py  test_preprocess_runner.py  test_radiomics_reproducibility.py  test_targets_config.py  test_task_config.py
