[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scatterrad"
version = "0.1.0"
description = "ScatterRad texture classification framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ScatterRad" }]
dependencies = [
  "numpy>=1.24,<2",
  "pydantic>=2.0",
  "SimpleITK>=2.3",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "joblib>=1.3",
  "optuna>=3.0",
  "tqdm>=4.66",
  "torch>=2.0",
  "lightgbm>=4.0",
  "PyWavelets>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
scatterrad = "scatterrad.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

'target-version' = "py39"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
